--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^5.0.1",
     "redux-actions": "^3.0.3",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
